infra/k8s/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canteen-ingress
  namespace: railsuite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: railsuite.local
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: canteen-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: canteen-core
                port:
                  number: 8080
